src/assets/styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    html {
        font-family: "Poppins", sans-serif;
        overflow-x: hidden;
    }
}
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}
.primary-text {
    color: #EC5800;
}
.primary-bg {
    background-color: #EC5800;
}
.secondary-text {
    color: #D4D2EC;
}
.secondary-bg {
    background-color: #D4D2EC;
}

